--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -16,18 +16,21 @@
     "@storybook/addon-interactions": "^7.0.18",
     "@storybook/addon-links": "^7.0.18",
     "@storybook/blocks": "^7.0.18",
+    "@storybook/manager-api": "^7.0.18",
     "@storybook/react": "^7.0.18",
     "@storybook/react-vite": "^7.0.18",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@storybook/theming": "^7.0.18",
     "@vitejs/plugin-react": "^4.0.0",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.18",
+    "storybook-dark-mode": "^3.0.0",
     "vite": "^4.3.9"
   },
   "dependencies": {
+    "@ignite-ui/eslint-config": "*",
     "@ignite-ui/react": "*",
     "@ignite-ui/tokens": "*",
-    "@ignite-ui/eslint-config": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
