--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ignite-ui/docs",
+  "name": "@pabloxt14-ignite-ui/docs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -30,10 +30,10 @@
     "vite": "^4.3.9"
   },
   "dependencies": {
-    "@ignite-ui/eslint-config": "*",
-    "@ignite-ui/react": "*",
-    "@ignite-ui/tokens": "*",
-    "@ignite-ui/ts-config": "*",
+    "@pabloxt14-ignite-ui/eslint-config": "*",
+    "@pabloxt14-ignite-ui/react": "*",
+    "@pabloxt14-ignite-ui/tokens": "*",
+    "@pabloxt14-ignite-ui/ts-config": "*",
     "@storybook/addon-a11y": "^7.0.22",
     "phosphor-react": "^1.4.1",
     "polished": "^4.2.2",
