ci: Use vercel token as secret

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -24,7 +24,7 @@ jobs:
 
       - run: npm run build # nosso comando de build dos pacotes com o TurboRepo 
         env:
-          TURBO_TOKEN: e6AWub7IevoqQ2EkHBeRDMV2
+          TURBO_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           TURBO_TEAM: pabloxt14
 
       - name: Deploy storybook
