--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@pabloxt14-ignite-ui/docs",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "main": "index.js",
   "scripts": {
